argocd/overlays/repo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  revisionHistoryLimit: 2
  template:
    spec:
      automountServiceAccountToken: true
      serviceAccountName: argocd-server
      containers:
        # argocd-vault-plugin with Helm
        - name: avp-helm
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.8.5
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-helm.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin

        # argocd-vault-plugin with Kustomize
        - name: avp-kustomize
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.8.5
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin

        # argocd-vault-plugin with plain YAML
        - name: avp
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.8.5
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp

            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp.yaml
              name: cmp-plugin

            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin

      volumes:
        - name: custom-tools
          emptyDir: {}
        - configMap:
            name: cmp-plugin
          name: cmp-plugin
